<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="appName">WordleSolver</string>

  <string name="refresh">Refresh</string>
  <string name="solve">Solve</string>
  <string name="theme">Theme</string>
  <string name="dark">Dark</string>
  <string name="cyan">Cyan</string>
  <string name="blue">Blue</string>
  <string name="orange">Orange</string>
  <string name="purple">Purple</string>
  <string name="red">Red</string>
  <string name="black">Black</string>
  <string name="light">Light</string>
  <string name="white">White</string>
  <string name="help">Help</string>
  <string name="about">About</string>

  <string name="language">Language</string>
  <string name="english">English</string>
  <string name="italian">Italian</string>
  <string name="spanish">Spanish</string>
  <string name="catalan">Catalan</string>
  <string name="french">French</string>
  <string name="portuguese">Portuguese</string>
  <string name="german">German</string>
  <string name="dutch">Dutch</string>
  <string name="afrikaans">Afrikaans</string>
  <string name="hungarian">Hungarian</string>
  <string name="greek">Greek</string>
  <string name="swedish">Swedish</string>
  <string name="danish">Danish</string>

  <string name="version" formatted="false"><a
  href="https://github.com/billthefarmer/solver/releases/latest">%s</a>\n\nBuilt
  %s\n\nCopyright \u00A9 2022 <a
  href="https://github.com/billthefarmer">Bill
  Farmer</a>\n\nDictionaries from <a
  href="https://github.com/lexica">Lexica</a>\nThemes and solver code
  from <a
  href="https://github.com/PoorLazyCoder">PoorLazyCoder</a>\n\nLicence
  <a href="https://www.gnu.org/licenses/gpl.txt">GNU GPLv3</a>
  </string>

</resources>
