<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

  <item
      android:id="@+id/refresh"
      android:icon="@drawable/ic_autorenew_white_24dp"
      android:showAsAction="ifRoom"
      android:title="@string/refresh" />

  <item
      android:id="@+id/solve"
      android:icon="@drawable/ic_replay_white_24dp"
      android:showAsAction="ifRoom"
      android:title="@string/solve" />

  <item
      android:id="@+id/theme"
      android:showAsAction="never"
      android:title="@string/theme">
    <menu>

        <item
            android:id="@+id/dark"
            android:showAsAction="never"
            android:title="@string/dark" />

        <item
            android:id="@+id/light"
            android:showAsAction="never"
            android:title="@string/light" />

        <item
            android:id="@+id/cyan"
            android:showAsAction="never"
            android:title="@string/cyan" />

        <item
            android:id="@+id/blue"
            android:showAsAction="never"
            android:title="@string/blue" />

        <item
            android:id="@+id/orange"
            android:showAsAction="never"
            android:title="@string/orange" />

        <item
            android:id="@+id/purple"
            android:showAsAction="never"
            android:title="@string/purple" />

        <item
            android:id="@+id/red"
            android:showAsAction="never"
            android:title="@string/red" />

        <item
            android:id="@+id/black"
            android:showAsAction="never"
            android:title="@string/black" />

        <item
            android:id="@+id/white"
            android:showAsAction="never"
            android:title="@string/white" />

    </menu>
  </item>

  <item
      android:id="@+id/language"
      android:showAsAction="never"
      android:title="@string/language">
    <menu>

      <item
          android:id="@+id/english"
          android:showAsAction="never"
          android:title="@string/english" />

      <item
          android:id="@+id/italian"
          android:showAsAction="never"
          android:title="@string/italian" />

      <item
          android:id="@+id/spanish"
          android:showAsAction="never"
          android:title="@string/spanish" />

      <item
          android:id="@+id/catalan"
          android:showAsAction="never"
          android:title="@string/catalan" />

      <item
          android:id="@+id/french"
          android:showAsAction="never"
          android:title="@string/french" />

      <item
          android:id="@+id/portuguese"
          android:showAsAction="never"
          android:title="@string/portuguese" />

      <item
          android:id="@+id/german"
          android:showAsAction="never"
          android:title="@string/german" />

      <item
          android:id="@+id/dutch"
          android:showAsAction="never"
          android:title="@string/dutch" />

      <item
          android:id="@+id/afrikaans"
          android:showAsAction="never"
          android:title="@string/afrikaans" />

      <item
          android:id="@+id/hungarian"
          android:showAsAction="never"
          android:title="@string/hungarian" />

      <item
          android:id="@+id/greek"
          android:showAsAction="never"
          android:title="@string/greek" />

      <item
          android:id="@+id/swedish"
          android:showAsAction="never"
          android:title="@string/swedish" />

    </menu>
  </item>

  <item
      android:id="@+id/about"
      android:showAsAction="never"
      android:title="@string/about" />

</menu>
